[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny-visualization-dashboard"
version = "0.1.0"
description = "A Shiny dashboard for data visualization with AI-powered chart analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "shiny>=0.6.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "opencv-python>=4.8.0",
    "pyautogui>=0.9.54",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "faicons>=0.2.0",
    "chatlas>=0.1.0",
    "python-dotenv>=1.0.0",
    "shinywidgets>=0.3.0",
    "pathlib2>=2.3.0; python_version<'3.4'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]